<resources>
    <string name="app_name">NeWork</string>
    <string name="menu_posts">Посты</string>
    <string name="menu_events">События</string>
    <string name="menu_users">Пользователи</string>
    <string name="menu_map">Карта</string>
    <string name="menu_login">Вход</string>
    <string name="menu_register">Регистрация</string>
    <string name="menu_logout">Выход</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="password_repeat_hint">Повтор пароля</string>
    <string name="name_hint">Имя</string>
    <string name="btn_login">Войти</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="login_no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="login_has_account">Уже есть аккаунт? Войти</string>
    <string name="password_empty_error">Пароль не может быть пустым</string>
    <string name="login_empty_error">Введите логин</string>
    <string name="name_empty_error">Введите имя</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="permission_camera_denied">Нужно разрешение на камеру</string>
    <string name="permission_storage_denied">Нужно разрешение на доступ к файлам</string>
    <string name="pick_avatar_camera">Сделать фото</string>
    <string name="pick_avatar_gallery">Выбрать из файлов</string>
    <string name="pick_avatar_title">Аватар</string>
    <string name="btn_pick_avatar">Выбрать фото</string>
    <string name="btn_like">Лайк</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_views">Просмотры</string>
    <string name="btn_add">Добавить</string>
    <string name="post_text_hint">Текст поста</string>
    <string name="event_text_hint">Текст события</string>
    <string name="btn_location">Локация</string>
    <string name="btn_mention">Упомянуть</string>
    <string name="btn_photo">Фото</string>
    <string name="btn_gallery">Галерея</string>
    <string name="btn_audio">Аудио</string>
    <string name="btn_video">Видео</string>
    <string name="btn_speakers">Спикеры</string>
    <string name="btn_date">Дата события</string>
    <string name="event_type_online">Online</string>
    <string name="event_type_offline">Offline</string>
    <string name="tab_wall">Стена</string>
    <string name="tab_jobs">Работы</string>
    <string name="job_company_hint">Компания</string>
    <string name="job_position_hint">Должность</string>
    <string name="job_link_hint">Сайт компании</string>
    <string name="btn_job_dates">Период работы</string>
    <string name="btn_add_job">Добавить работу</string>
    <string name="looking_for_job">В поиске работы</string>
    <string name="mentioned_users">Упомянутые</string>
    <string name="participants">Участники</string>
    <string name="speakers">Спикеры</string>
    <string name="last_job">Последнее место работы</string>
    <string name="map_placeholder">Карта</string>
    <string name="attachment_placeholder">Вложение</string>
    <string name="link_placeholder">Ссылка</string>
    <string name="likes_count">0</string>
    <string name="liked_by">Нравится</string>
    <string name="shares_count">0</string>
    <string name="views_count">0</string>
    <string name="author_name">Автор</string>
    <string name="published_date">21.08.2026 10:00</string>
    <string name="event_date">20.08.2026 11:00</string>
    <string name="user_login">login</string>
    <string name="user_name">Имя</string>
    <string name="post_content">Текст поста</string>
    <string name="event_content">Текст события</string>
    <string name="job_company">Компания</string>
    <string name="job_position">Должность</string>
    <string name="job_period">01 янв 2026 — сейчас</string>
    <string name="edit_post_title">Новый пост</string>
    <string name="btn_remove">Remove</string>
    <string name="attach_title">Вложение</string>
    <string name="attach_gallery">Фото из галереи</string>
    <string name="attach_video">Видео</string>
    <string name="attach_audio">Аудио</string>
    <string name="edit_event_title">Событие</string>
    <string name="edit_job_title">Работа</string>
    <string name="select_users_title">Пользователи</string>
    <string name="event_type_label">Тип события</string>
</resources>
